syntax = "proto3";

package logproto;

option go_package = "github.com/grafana/loki/pkg/logproto";

message CountMinSketch {
  uint32 depth = 1;
  uint32 width = 2;

  // counters is a matrix of depth * width as a single slice.
  // double is float64, float is float32
  repeated float counters = 3;
}

message TopK {
  CountMinSketch cms = 1;

  message Pair {
    string event = 1;
    float count = 2;
  }

  message Result {
    string key = 1;
    repeated Pair list = 2;
  }

  repeated Result results = 2;

  bytes hyperloglog = 3;
}

message TopKMatrix {
  message Vector {
    TopK topk = 1;
    int64 timestamp_ms = 2;
  }

  repeated Vector values = 1;
}
